--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,11 @@ body{
     flex-direction: column;
     align-items: center;
 }
-.controls .controls_btns{
+.controls .controls_buttons{
     margin-top: 10px;
     margin-bottom: 30px;
 }
-.controls_btns button{
+.controls_buttons button {
     all: unset;
     cursor: pointer;
     background-color: white;
@@ -45,8 +45,8 @@ body{
     font-size: 12px;
     margin-bottom: 30px;
 }
-.controls_btns button:active{
-    transform: scale(0,1);
+.controls_buttons button:active{
+    transform: scale(0.98);
 }
 .controls .controls_colors{
     display: flex;
